Split cuda to x86_46 and aarch64

--- a/ci/templates/base_image.yml.j2
+++ b/ci/templates/base_image.yml.j2
@@ -17,7 +17,7 @@ test_job_base_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
     - '[[ $(source /etc/os-release && echo $VERSION_ID) == "{{osver}}" ]]'
     - '[[ $(spack --version) == "{{spackver}}" ]]'
     - which spack-install-helper
-    {% if arch == "cuda" -%}
+    {% if arch.startswith("cuda") -%}
     - 'apt-cache show cuda-libraries-* | grep "Version: {{cudaver}}"'
     {%- endif %}
     {% if arch == "rocm" -%}
