--- a/ci/templates/helper_image.yml.j2
+++ b/ci/templates/helper_image.yml.j2
@@ -4,8 +4,20 @@ build_job_helper_image-{{os}}{{osver}}-{{archstr[arch]}}:
     - {{container_builder[arch]}}
   variables:
     DOCKERFILE: "{{helperdockerfile}}"
-    PERSIST_IMAGE_NAME: "{{registry_helper_image_name_tag}}"
+    PERSIST_IMAGE_NAME: "{{build_helper_image_name_tag[arch]}}"
     DOCKER_BUILD_ARGS: '{{docker_build_args_helper[arch]}}'
+
+{% if arch == "cuda-aarch64" %}
+# We have multiarch image only for CUDA
+# and we need only one job for CUDA, aarch64 is an arbitrary choice
+create_job_helper_image_multiarch-{{os}}{{osver}}-{{archstr[arch]}}:
+  stage: create_multiarch_base_image
+  extends: .make-multiarch-image
+  variables:
+    PERSIST_IMAGE_NAME_X86_64: "{{build_helper_image_name_tag['cuda-x86_64']}}"
+    PERSIST_IMAGE_NAME_AARCH64: "{{build_helper_image_name_tag['cuda-aarch64']}}"
+    PERSIST_IMAGE_NAME: "{{registry_helper_image_name_tag}}"
+{% endif %}
 
 test_job_helper_image-{{os}}{{osver}}-{{archstr[arch]}}:
   stage: test_base_image
@@ -22,6 +34,9 @@ test_job_helper_image-{{os}}{{osver}}-{{archstr[arch]}}:
     - 'apt-cache show rocm-core | grep "Version: {{rocmver}}."'
     {%- endif %}
 
+{% if arch != "cuda-x86_64" %}
+# We have multiarch image only for CUDA
+# and we need only one job for CUDA, aarch64 is an arbitrary choice
 deploy_job_helper_image-{{os}}{{osver}}-{{archstr[arch]}}:
   stage: deploy_base_image
   extends:
@@ -41,10 +56,11 @@ deploy_job_helper_image-{{os}}{{osver}}-{{archstr[arch]}}:
     - DST_REGISTRY=${DST%%/*}
     - echo ${DST_REGISTRY}
     - echo ${DEPLOY_JFROG_PASSWORD} | skopeo login --username ${DEPLOY_JFROG_USERNAME} --password-stdin ${DST_REGISTRY}
-    - skopeo copy "docker://${SRC}" "docker://${DST}"
+    - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
     - echo "Deploy to GitHub"
     - DST=$DST_GITHUB
     - DST_REGISTRY=${DST%%/*}
     - echo ${DST_REGISTRY}
     - echo ${DEPLOY_GITHUB_PASSWORD} | skopeo login --username ${DEPLOY_GITHUB_USERNAME} --password-stdin ${DST_REGISTRY}
-    - skopeo copy "docker://${SRC}" "docker://${DST}"
+    - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
+{% endif %}
