--- a/ci/templates/helper_image.yml.j2
+++ b/ci/templates/helper_image.yml.j2
@@ -52,10 +52,11 @@ deploy_job_helper_image-{{os}}{{osver}}-{{archstr[arch]}}:
     DST_GITHUB: "{{deploy_helper_image_name_tag_github}}"
   script:
     - echo "Deploy to JFrog"
+    - !reference [.fetch-registry-tokens, script]
     - DST=$DST_JFROG
     - DST_REGISTRY=${DST%%/*}
     - echo ${DST_REGISTRY}
-    - echo ${DEPLOY_JFROG_PASSWORD} | skopeo login --username ${DEPLOY_JFROG_USERNAME} --password-stdin ${DST_REGISTRY}
+    - echo ${CSCS_REGISTRY_PASSWORD} | skopeo login --username ${CSCS_REGISTRY_USER} --password-stdin ${DST_REGISTRY}
     - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
     - echo "Deploy to GitHub"
     - DST=$DST_GITHUB
