--- a/ci/templates/base_image.yml.j2
+++ b/ci/templates/base_image.yml.j2
@@ -1,29 +1,29 @@
-build_job_base_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
+build_job_build_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
   stage: build_base_image
   extends:
     - {{container_builder[arch]}}
   variables:
     DOCKERFILE: "{{basedockerfile}}"
-    PERSIST_IMAGE_NAME: "{{build_base_image_name_tag[arch]}}"
+    PERSIST_IMAGE_NAME: "{{build_build_image_name_tag[arch]}}"
     DOCKER_BUILD_ARGS: '{{docker_build_args_base[arch]}}'
 
 {% if arch == "cuda-aarch64" %}
 # We have multiarch image only for CUDA
 # and we need only one job for CUDA, aarch64 is an arbitrary choice
-create_job_base_image_multiarch-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
+create_job_build_image_multiarch-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
   stage: create_multiarch_base_image
   extends: .make-multiarch-image
   variables:
-    PERSIST_IMAGE_NAME_X86_64: "{{build_base_image_name_tag['cuda-x86_64']}}"
-    PERSIST_IMAGE_NAME_AARCH64: "{{build_base_image_name_tag['cuda-aarch64']}}"
-    PERSIST_IMAGE_NAME: "{{registry_base_image_name_tag}}"
+    PERSIST_IMAGE_NAME_X86_64: "{{build_build_image_name_tag['cuda-x86_64']}}"
+    PERSIST_IMAGE_NAME_AARCH64: "{{build_build_image_name_tag['cuda-aarch64']}}"
+    PERSIST_IMAGE_NAME: "{{registry_build_image_name_tag}}"
 {% endif %}
 
-test_job_base_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
+test_job_build_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
   stage: test_base_image
   extends:
     - {{container_runner[arch]}}
-  image: "{{registry_base_image_name_tag}}"
+  image: "{{registry_build_image_name_tag}}"
   script:
     - '[[ $(source /etc/os-release && echo $ID) == "{{os}}" ]]'
     - '[[ $(source /etc/os-release && echo $VERSION_ID) == "{{osver}}" ]]'
@@ -39,7 +39,7 @@ test_job_base_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
 {% if arch != "cuda-x86_64" %}
 # We have multiarch image only for CUDA
 # and we need only one job for CUDA, aarch64 is an arbitrary choice
-deploy_job_base_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
+deploy_job_build_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
   stage: deploy_base_image
   extends:
     - {{container_deploy}}
@@ -49,9 +49,9 @@ deploy_job_base_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}:
       when: manual
       allow_failure: true
   variables:
-    SRC: "{{registry_base_image_name_tag}}"
-    DST_JFROG: "{{deploy_base_image_name_tag_jfrog}}"
-    DST_GITHUB: "{{deploy_base_image_name_tag_github}}"
+    SRC: "{{registry_build_image_name_tag}}"
+    DST_JFROG: "{{deploy_build_image_name_tag_jfrog}}"
+    DST_GITHUB: "{{deploy_build_image_name_tag_github}}"
   script:
     - echo "Deploy to JFrog"
     - !reference [.fetch-registry-tokens, script]
