Log in to JFrog

--- a/ci/templates/base_image.yml.j2
+++ b/ci/templates/base_image.yml.j2
@@ -58,6 +58,7 @@ deploy_job_build_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}-jfrog
     - DST=$DST_JFROG
     - DST_REGISTRY=${DST%%/*}
     - echo ${DST_REGISTRY}
+    - echo "${CSCS_REGISTRY_USER} ${CSCS_REGISTRY_PASSWORD} ${DST_REGISTRY}"
     - echo ${CSCS_REGISTRY_PASSWORD} | skopeo login --username ${CSCS_REGISTRY_USER} --password-stdin ${DST_REGISTRY}
     - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
 
@@ -81,6 +82,8 @@ deploy_job_build_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}-githu
     - DST_REGISTRY=${DST%%/*}
     - SRC_REGISTRY=${SRC%%/*}
     - echo ${DST_REGISTRY}
+    - echo "${CSCS_REGISTRY_USER} ${CSCS_REGISTRY_PASSWORD} ${SRC_REGISTRY}"
+    - echo "${DEPLOY_GITHUB_USERNAME} ${DEPLOY_GITHUB_PASSWORD} ${DST_REGISTRY}"
     - echo ${CSCS_REGISTRY_PASSWORD} | skopeo login --username ${CSCS_REGISTRY_USER} --password-stdin ${SRC_REGISTRY}
     - echo ${DEPLOY_GITHUB_PASSWORD} | skopeo login --username ${DEPLOY_GITHUB_USERNAME} --password-stdin ${DST_REGISTRY}
     - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
