Fix JFrog login

--- a/ci/templates/base_image.yml.j2
+++ b/ci/templates/base_image.yml.j2
@@ -78,6 +78,8 @@ deploy_job_build_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}-githu
     - !reference [.fetch-registry-tokens, script]
     - DST=$DST_GITHUB
     - DST_REGISTRY=${DST%%/*}
+    - SRC_REGISTRY=${SRC%%/*}
+    - echo ${CSCS_REGISTRY_PASSWORD} | skopeo login --username ${CSCS_REGISTRY_USER} --password-stdin ${SRC_REGISTRY}
     - echo ${DEPLOY_GITHUB_PASSWORD} | skopeo login --username ${DEPLOY_GITHUB_USERNAME} --password-stdin ${DST_REGISTRY}
     - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
 {% endif %}
