echo SRC DST skopeo copy, renamed template files

--- a/ci/templates/build_image.yml.j2
+++ b/ci/templates/build_image.yml.j2
@@ -60,6 +60,7 @@ deploy_job_build_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}-jfrog
     - DST=$DST_JFROG
     - DST_REGISTRY=${DST%%/*}
     - echo ${CSCS_REGISTRY_PASSWORD} | skopeo login --username ${CSCS_REGISTRY_USER} --password-stdin ${DST_REGISTRY}
+    - echo "Copying ${SRC} to ${DST}"
     - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
 
 deploy_job_build_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}-github:
@@ -85,5 +86,6 @@ deploy_job_build_image-{{os}}{{osver}}-spack{{spackver}}-{{archstr[arch]}}-githu
     - SRC_REGISTRY=${SRC%%/*}
     - echo ${CSCS_REGISTRY_PASSWORD} | skopeo login --username ${CSCS_REGISTRY_USER} --password-stdin ${SRC_REGISTRY}
     - echo ${DEPLOY_GITHUB_PASSWORD} | skopeo login --username ${DEPLOY_GITHUB_USERNAME} --password-stdin ${DST_REGISTRY}
+    - echo "Copying ${SRC} to ${DST}"
     - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
 {% endif %}
