--- a/ci/templates/runtime_image.yml.j2
+++ b/ci/templates/runtime_image.yml.j2
@@ -58,6 +58,7 @@ deploy_job_runtime_image-{{os}}{{osver}}-{{archstr[arch]}}-jfrog:
     - DST=$DST_JFROG
     - DST_REGISTRY=${DST%%/*}
     - echo ${CSCS_REGISTRY_PASSWORD} | skopeo login --username ${CSCS_REGISTRY_USER} --password-stdin ${DST_REGISTRY}
+    - echo "Copying ${SRC} to ${DST}"
     - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
 
 deploy_job_runtime_image-{{os}}{{osver}}-{{archstr[arch]}}-github:
@@ -83,5 +84,6 @@ deploy_job_runtime_image-{{os}}{{osver}}-{{archstr[arch]}}-github:
     - SRC_REGISTRY=${SRC%%/*}
     - echo ${CSCS_REGISTRY_PASSWORD} | skopeo login --username ${CSCS_REGISTRY_USER} --password-stdin ${SRC_REGISTRY}
     - echo ${DEPLOY_GITHUB_PASSWORD} | skopeo login --username ${DEPLOY_GITHUB_USERNAME} --password-stdin ${DST_REGISTRY}
+    - echo "Copying ${SRC} to ${DST}"
     - skopeo copy --multi-arch=all "docker://${SRC}" "docker://${DST}"
 {% endif %}
